--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "html-webpack-plugin": "^2.9.0",
+    "postcss-cssnext": "^2.5.1",
+    "postcss-loader": "^0.8.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
