--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^0.9.1",
     "classnames": "^2.2.5",
+    "crossfade": "^1.0.0",
     "normalize.css": "^4.2.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-icons": "^2.2.1",
     "react-router": "^2.0.0",
-    "wavesurfer.js": "^1.1.5"
+    "wavesurfer.js": "^1.1.10"
   },
   "devDependencies": {
     "babel-core": "^6.7.0",
