--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "production": "webpack -p",
-    "start": "webpack-dev-server --inline --hot --port 9000"
+    "build": "webpack -p",
+    "start": "webpack-dev-server --inline --hot --host 0.0.0.0 --port 9000"
   },
   "author": "",
   "license": "ISC",
