--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "classnames": "^2.2.5",
     "normalize.css": "^4.2.0",
     "react": "^0.14.7",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
     "react-icons": "^2.2.1",
     "react-router": "^2.0.0",
