--- a/package.json
+++ b/package.json
@@ -5,35 +5,72 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -p",
-    "start": "webpack-dev-server --inline --hot --host 0.0.0.0 --port 9000"
+    "start": "webpack-dev-server --progress --history-api-fallback --hot --inline --port 9000 --open"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.9.1",
-    "classnames": "^2.2.5",
-    "normalize.css": "^4.2.0",
-    "react": "^0.14.7",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.7",
-    "react-icons": "^2.2.1",
-    "react-router": "^2.0.0",
-    "wavesurfer.js": "^1.1.10"
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "normalize.css": "^8.0.1",
+    "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "^16.13.1",
+    "react-ga": "3.1.2",
+    "react-icons": "^3.10.0",
+    "react-router-dom": "5.2.0",
+    "wavesurfer.js": "^4.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.9.0",
-    "postcss-cssnext": "^2.5.1",
-    "postcss-loader": "^0.8.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "@babel/core": "7.10.5",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.1.0",
+    "copy-webpack-plugin": "6.0.3",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "postcss": "7.0.32",
+    "postcss-cssnext": "3.1.0",
+    "postcss-import": "12.0.1",
+    "postcss-load-config": "2.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-nesting": "7.0.1",
+    "react-hot-loader": "4.12.21",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "modules": false
+        }
+      ],
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "react-hot-loader/babel",
+      "@babel/plugin-proposal-class-properties"
+    ]
+  },
+  "postcss": {
+    "plugins": {
+      "postcss-import": {},
+      "postcss-cssnext": {
+        "browsers": [
+          "last 2 versions",
+          "> 5%"
+        ]
+      },
+      "postcss-nesting": {}
+    }
   }
 }
